--- a/HierarchicalDelegateCommandsForContextMenu/HierarchicalDelegateCommandsForContextMenu/HierarchicalDelegateCommandsForContextMenu.csproj
+++ b/HierarchicalDelegateCommandsForContextMenu/HierarchicalDelegateCommandsForContextMenu/HierarchicalDelegateCommandsForContextMenu.csproj
@@ -66,6 +66,10 @@
     <Compile Include="Window1.xaml.cs">
       <DependentUpon>Window1.xaml</DependentUpon>
     </Compile>
+    <Page Include="Dictionary1.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
